[project]
name = "copado_ai_sdk"
version = "0.1.0"
description = "Simple Python client for Copado AI API"
authors = [{name = "Fekry Mostafa"}]
requires-python = ">=3.9"
dependencies = ["httpx>=0.27", "pydantic>=2.7", "python-dotenv>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copado_ai_sdk"]

[tool.black]
line-length = 88
skip-string-normalization = true
